--- a/backend/package.json
+++ b/backend/package.json
@@ -11,8 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google/genai": "^1.28.0",
     "axios": "^1.13.1",
     "dotenv": "^17.2.3",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "groq-sdk": "^0.34.0"
   }
 }
