--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,9 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "groq-sdk": "^0.34.0"
+    "express-session": "^1.18.2",
+    "groq-sdk": "^0.34.0",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0"
   }
 }
